--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -41,7 +41,8 @@
     "react-native-webview": "13.13.5",
     "expo-local-authentication": "~16.0.5",
     "expo-linear-gradient": "~14.1.5",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
